# CodaCite

./: .antigravityignore  .gitignore  .julesrules  .pre-commit-config.yaml  404.html  AGENTS.md  Dockerfile  README.md  codacite.spec  coverage_report.txt  docker-compose.yml  index.html  install.sh  mypy.ini  pyproject.toml  run_pr_comments.py  search.json  test_failure.txt  test_failure_gemini.txt  test_failure_store_remaining.txt  test_failure_traverse.txt  test_fastcoref.py  uv.toml  zensical.toml
.agents/: README.md
.agents/rules/: 00-global-invariants.md  01-surreal-dba.md  02-backend-architect.md  03-qa-automator.md  04-lessons-learned.md  05-artifacts.md  06-devops-orchestrator.md  07-vcs-manager.md
.agents/skills/: free_port.sh  inspect_graph.py  manifest.json
.agents/workflows/: bootstrap.md  commit.md  coverage-boost.md  document-all.md  implement-entity-resolution.md  implement.md  purge-cruft.md  qa-pass-all.md  qa-pass.md  refactor-all.md  refactor-tests.md  reflect.md  run_tests.md  sync-zensical.md  update-readme.md
.github/workflows/: ci.yml
AGENT_CONTEXT/: index.html
app/: __init__.py  config.py  main.py  main_mock.py
app/agents/: router.py  tools.py
app/application/: __init__.py  chat.py  enhancement.py  extraction.py  ingestion.py  notebook.py  rag_graph.py  retrieval.py
app/cli/: __init__.py  download_models.py  quantize.py
app/core/: logging_config.py
app/domain/: __init__.py  exceptions.py  models.py  ports.py
app/embeddings/: embedder.py
app/graph/: extractor.py  store.py
app/infrastructure/: __init__.py  bootstrap.py  coreference.py  credentials.py  embeddings.py  extraction.py  generator.py  linker.py  local_generator.py  resolution.py  vlm.py
app/infrastructure/database/: __init__.py  schema.py  store.py
app/ingestion/: chunker.py  loader.py  preprocessor.py
app/interfaces/: __init__.py  dependencies.py  middleware.py  routers.py
app/retrieval/: reranker.py  retriever.py
app/static/css/: style.css
app/templates/: index.html  notebook.html
architecture/: index.html
data_pipeline/: index.html
docs/: AGENT_CONTEXT.md  architecture.md  architecture_whitepaper.md  data_pipeline.md  index.md  infrastructure.md  operations.md  retrieval.md  ui.md  workflows.md
infrastructure/: index.html
operations/: index.html
retrieval/: index.html
scratch/: check_fastcoref.py  debug_coref.py  fix_ruff_d103.py  test_keyring.py
scratch_test/: pyproject.toml
scripts/: download_models.py
tests/: __init__.py  conftest.py  pytest.ini  test_agents.py  test_api.py  test_embeddings.py  test_graph.py  test_ingestion.py  test_retrieval.py
tests/e2e/: __init__.py  test_api.py
tests/integration/: __init__.py  test_surrealdb_integration.py
tests/mocks/: ui_server.py
tests/unit/: __init__.py  conftest.py  test_api.py  test_chat_use_case.py  test_cli_quantize.py  test_config.py  test_coref.py  test_coreference.py  test_credentials.py  test_dependencies.py  test_document_loader.py  test_domain_exceptions.py  test_embeddings.py  test_enhancement.py  test_extraction.py  test_gemini_extractor.py  test_generator.py  test_gliner_extractor.py  test_graph_store_hardened.py  test_ingestion.py  test_ingestion_hardened.py  test_linker.py  test_middleware.py  test_resolution.py  test_retrieval.py  test_surrealdb_store.py  test_text_preprocessor.py  test_use_cases.py
tests/unit/application/: test_chat.py  test_chat_detailed.py  test_enhancement.py  test_extraction.py  test_ingestion.py  test_ingestion_background.py  test_notebook.py  test_notebook_use_case.py  test_rag_graph.py  test_retrieval.py
tests/unit/domain/: test_domain_exceptions.py  test_text_preprocessor.py
tests/unit/infrastructure/: test_bootstrap_health.py  test_config.py  test_coreference.py  test_credentials.py  test_database_errors.py  test_document_loader.py  test_embeddings.py  test_extraction.py  test_gemini_extractor.py  test_generator.py  test_gliner_extractor.py  test_graph_store_hardened.py  test_linker.py  test_local_generator.py  test_resolution.py  test_schema.py  test_surrealdb_store.py  test_vlm.py
tests/unit/interfaces/: test_api.py  test_cli_quantize.py  test_dependencies.py  test_middleware.py
ui/: index.html
