[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enterprise-omni-copilot"
version = "0.1.0"
description = "GraphRAG-based Document Intelligence and Workflow Automation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.4",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "sentence-transformers>=3.0.0",
    "huggingface-hub>=0.23.0",
    "torch>=2.3.0",
    "transformers>=4.41.0",
    "surrealdb>=0.3.2",
    "pypdf>=4.2.0",
    "python-docx>=1.1.2",
    "markdown>=3.6",
    "beautifulsoup4>=4.12.3",
    "regex>=2024.5.15",
    "python-multipart>=0.0.9",

    "fastcoref>=2.1.6",
    "networkx>=3.6.1",
    "jellyfish>=1.2.1",
    "gliner>=0.2.26",
    "langchain-google-genai>=4.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "testcontainers>=4.7.0",
    "ruff>=0.4.9",
    "mypy>=1.10.0",
    "types-regex>=2024.5.15.20240519",
    "types-markdown>=3.6.0.20240316",
]

[project.scripts]
download-models = "app.cli.download_models:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "C4", "SIM", "D"]
ignore = ["E501", "D100", "D104"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "ruff>=0.15.11",
    "pytest>=8.3.4",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "testcontainers>=4.9.1",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["D104"]
"tests/*" = ["D100"]
