[project]
name = "codacite"
version = "0.1.0"
description = "GraphRAG-based Document Intelligence and Workflow Automation"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.46.0",
    "pydantic>=2.13.3",
    "surrealdb>=1.0.8",
    "langchain>=1.2.15",
    "langchain-google-genai>=2.0.0",
    "spacy>=3.7.5",
    "fastcoref>=2.1.6",
    "python-multipart>=0.0.9",
    "aiofiles>=25.1.0",
    "python-docx>=1.2.0",
    "docling>=2.1.0",
    "Pillow>=10.3.0",
    "python-magic>=0.4.27",
    "markdown>=3.10.2",
    "jellyfish>=1.2.1",
    "networkx>=3.0.0,<3.5.0",
    "pydantic-settings>=2.14.0",
    "secretstorage>=3.3.3",
    "optimum[openvino]>=1.20.0",
    "nncf>=2.10.0",
    "langchain-text-splitters>=0.3.6",
    "llama-cpp-python>=0.3.21",
    "langchain-community>=0.4.1",
    "sentence-transformers>=3.0.0",
    "langchain-huggingface>=1.2.2",
    "huggingface-hub>=0.30.0",
]

[project.scripts]
download-models = "app.cli.download_models:main"
quantize = "app.cli.quantize:main"
zensical = "zensical.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=app --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "llm: marks tests that interact with LLM (mocked or real)",
    "db: marks tests that interact with the database",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C4", # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "D",  # pydocstyle
]
ignore = [
    "D100",
    "D104",
    "B008", # FastAPI depends
    "E501",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "surrealdb.*",
    "langchain.*",
    "langchain_google_genai.*",
    "spacy.*",
    "fastcoref.*",
    "magic.*",
    "gliner.*",
]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "testcontainers>=4.4.1",
    "ruff>=0.4.9",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.15.1",
    "pre-commit>=4.6.0",
    "zensical>=0.0.32",
    "pyinstaller>=6.11.1",
]
